welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:2: error: value =< is not a member of Int
	if ( (a<=19 && a>=13) || (b>=13 && b=<19) || (c>=13 && c=<19)){
                                            ^hasTeen:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if ( (a<=19 && a>=13) || (b>=13 && b=<19) || (c>=13 && c=<19)){
        ^