welcome.lessons.welcome.bat.bool1.HasTeen.scala.code
def hasTeen(a:Int, b:Int, c:Int): Boolean = {
	if ( (a<=19 && a>=13) || (b>=13 && b=<19) || (c>=13 && c=<19)){
		return true
	}
}
